# notifyc

./: .gitignore  docker-compose.yml  dockerfile  env_dist  pyproject.toml
source/: __main__.py  git.py  settings.py  storage.py  telegram.py
