[tool.poetry]
name = "notifyc"
version = "0.1.0"
description = "Simple git fetch-update notifier"
authors = ["shared-object"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
gitpython = "^3.1.43"
requests = "^2.32.3"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
